# Claude-Code-Feishu

./: .gitignore  CHANGELOG.md  CLAUDE.md  HEARTBEAT.md  LICENSE  PLAN.md  README.en.md  README.md  README.zh-CN.md  SETUP.md  briefing.py  briefing_plugin.py  briefing_v2.py  claude_cli.py  config.yaml.example  dispatcher.py  feishu_api.py  feishu_bot.py  feishu_reporter.py  feishu_utils.py  file_store.py  gemini_api.py  gemini_cli.py  heartbeat.py  hub.sh  llm_router.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  start.sh  store.py  task_runner.py
agent/: main.py  robot_main.py
agent/infra/: autonomy.py  error_tracker.py  exploration.py  exploration_scoring.py  file_store.py  goal_tree.py  merge_queue.py  message_store.py  models.py  session_store.py  skill_usage.py  store.py  user_store.py
agent/jobs/: arxiv.py  behavior_signals.py  briefing.py  error_scan.py  (+11 more)
config/: jobs.example.yaml  jobs.yaml
docs/: CHANGELOG.md  SETUP.md  SETUP.zh-CN.md  com.claude-hub.plist.template  feishu_scopes.json  feishu_scopes.md  launchd.plist.template
feishu_cli/: __init__.py  sheet.py
scripts/: award_screen.py  backfill_scores.py  bench_gemini_search.py  briefing_run.py  check_quota.py  comment_archive.py  compress_image.py  daily_review.py  deploy_notify.py  extract_behavior_signals.py  github_issue_scan.py  install_launchd.sh  mads_outcome_tracker.py  metrics_bitable_sync.py  opensource_check.py  response_quality_metrics.py  seed_exploration.py  sentinel_ctl.py  weekly_signal_digest.py
tests/: conftest.py  test_maqs_stale_recovery.py
(+151 files in other folders)
